@@ -1,5 +1,6 @@
 import { IExeca } from '../model';
 import { getWhereis } from '../utils';
+const execa = require('execa');
 
 let res: string | undefined = '';
 
@@ -16,35 +17,27 @@ test('no response', async () => {
   expect(await getWhereis('xyAb', scall)).toBeFalsy();
 });
 
-test('audacity no response', async () => {
-  expect(await getWhereis('audacity', scall)).toBeFalsy();
-});
-
 test('audacity header response', async () => {
   res = 'audacity:';
   expect(await getWhereis('audacity', scall)).toBeFalsy();
 });
 
-test('audacity snap response', async () => {
-  res = '/snap/audacit/ab12/audacity';
-  expect(await getWhereis('audacity', scall)).toBe(
-    '/snap/audacit/ab12/audacity'
-  );
-});
-
 test('audacity header snap response', async () => {
-  res = 'audacity: /snap/audacit/ab12/audacity';
-  expect(await getWhereis('audacity', scall)).toBe(
-    '/snap/audacit/ab12/audacity'
-  );
+  res = 'audacity: /snap/bin/audacity';
+  expect(await getWhereis('audacity', scall)).toBe('/snap/bin/audacity');
+});
+
+test('audacity header snap response with newline', async () => {
+  res = 'audacity: /snap/bin/audacity\n';
+  expect(await getWhereis('audacity', scall)).toBe('/snap/bin/audacity');
+});
+
+test('audacity live', async () => {
+  expect(await getWhereis('audacity', execa)).toBe('/snap/bin/audacity');
 });
 
 test('python not installed', async () => {
-  expect(await getWhereis('python', scall)).toBeFalsy();
-});
-
-test('python not installed', async () => {
-  res = '/usr/bin/python3.9 /opt/python2.7';
+  res = 'python: ';
   expect(await getWhereis('python', scall)).toBeFalsy();
 });
 
@@ -54,6 +47,6 @@ test('python with header not installed', async () => {
 });
 
 test('python installed', async () => {
-  res = '/usr/bin/python /usr/bin/python3.9 /opt/python2.7';
+  res = 'python: /usr/bin/python /usr/bin/python3.9 /opt/python2.7';
   expect(await getWhereis('python', scall)).toBe('/usr/bin/python');
 });
